# platform.adaptation.spreadtrum.audio-hal-sc7727

./: Makefile.am  configure.ac  tizen-audio-comm.c  tizen-audio-device.c  tizen-audio-impl-ctrl.c  tizen-audio-impl-pcm.c  tizen-audio-impl-ucm.c  tizen-audio-impl.h  tizen-audio-internal.h  tizen-audio-modem.c  tizen-audio-pcm.c  tizen-audio-routing.c  tizen-audio-stream.c  tizen-audio-ucm.c  tizen-audio-util.c  tizen-audio-volume.c  tizen-audio.c  tizen-audio.h  vb_control_parameters.h
packaging/: audio-hal-sc7727.spec
